certmanager/ca-issuer/10-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: global
  namespace: ifconfig
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: istio-system/root-secret
    hosts:
    - ifconfig.inv.gov.ar
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - ifconfig.inv.gov.ar
