certmanager/ca-issuer/25-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ifconfig
  namespace: ifconfig
spec:
  hosts:
    - ifconfig.inv.gov.ar
  gateways:
  - ifconfig/global
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: ifconfig-svc.ifconfig.svc.cluster.local
        port:
          number: 8080
